5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1865_1642.log
== TEST (2019-07-04 10:09:01) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in size(a):
	if a[i]%5==0:
		
		n = n + 1
	
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:52) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in size(a):
	if a[i] % 5 = 0:
		n = n + 1
	
print(n)
-- ERROR:
File "XXXX", line 6
    if a[i] % 5 = 0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:55) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in size(a):
	if a[i] % 5 = 0:
		n = n + 1
	
print(n)
-- ERROR:
File "XXXX", line 6
    if a[i] % 5 = 0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:10) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in size(a):
	if a[i] % 5 == 0:
		n = n + 1
	
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:46) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:14:57) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if[i] % 5 == 0:
		new[x] = new[x] + i
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:15:18) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if a[i] % 5 == 0:
		new[x] = new[x] + i
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:15:41) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if a[i] % 5 == 0:
		new[x] = new[x] + i
		x = x +1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:15:56) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if a[i] % 5 == 0:
		new[x] = new[x] + i
		x = x +1
		
print(new)
	
-- EXECUTION TIME:
1.09982
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
[0 1 3 7]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:16:02) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if a[i] % 5 == 0:
		new[x] = new[x] + i
		x = x +1
		
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:16:26) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if a[i] % 5 == 0:
		new[x] = new[x] + i
		x = x +1
print(n)	
print(new)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:16:36) 
-- CODE:
from numpy import*

a = array(eval(input("digite: ")))
n = 0
for i in range(size(a)):
	if a[i] % 5 == 0:
		n = n + 1
	
new = zeros(n, dtype=int)

x = 0
y = 0

for i in range(size(a)):
	if a[i] % 5 == 0:
		new[x] = new[x] + i
		x = x +1
print(n)	
print(new)
	
-- EXECUTION TIME:
1.14123
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
